--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
+<meta charset="utf-8" />
+<meta content="width=device-width" name="viewport" />
 <title>{{ page.title }}</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta content="summary_large_image" name="twitter:card" />
+<meta content="website" property="og:type" />
+<meta content="{{ page.description }}" property="og:description" />
+<meta content="" property="og:url" />
+<meta content="{{ page.image }}" property="og:image" />
+<meta content="{{ page.title }}" property="og:title" />
+<meta content="{{ page.description }}" name="description" />
+<link href="img/style.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700" rel="stylesheet" type="text/css" />
 <!-- favicon d1oco4z2z1fhwp d15k2d11r6t6rl -->
 <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" />
 <link rel="shortcut icon" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" type="image/x-icon" />
 <link rel="apple-touch-icon" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" />
-<!--[if mso]><xml><w:WordDocument xmlns:w="urn:schemas-microsoft-com:office:word"><w:DontUseAdvancedTypographyReadingMail /></w:WordDocument> <o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG /></o:OfficeDocumentSettings></xml><![endif]--><!--[if !mso]><!-->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700" rel="stylesheet" type="text/css" />
-<!--<![endif]-->
-<style>* {box-sizing: border-box;}body {margin: 0;padding: 0;}a[x-apple-data-detectors] {color: inherit !important;text-decoration: inherit !important;} img {max-width: 100%; border-radius: 4px;} a {color: #00f; text-decoration: none; } a:hover {color: #ff4500;} #MessageViewBody a {color: inherit; text-decoration: none;}p {line-height: inherit;}.desktop_hide,.desktop_hide table {mso-hide: all;display: none;max-height: 0px;overflow: hidden;}.image_block img + div {display: none;}sup,sub {font-size: 75%;line-height: 0;}@media (max-width: 520px) {.desktop_hide table.icons-inner,.social_block.desktop_hide .social-table {display: inline-block !important;}.icons-inner {text-align: center;}.icons-inner td {margin: 0 auto;}.mobile_hide {display: none;}.row-content {width: 100% !important;}.stack .column {width: 100%;display: block;}.mobile_hide {min-height: 0;max-height: 0;max-width: 0;overflow: hidden;font-size: 0px;}.desktop_hide,.desktop_hide table {display: table !important;max-height: none !important;}}</style>
-<!--[if mso]><style>sup,sub {font-size: 100% !important;}sup {mso-text-raise: 10%;}sub {mso-text-raise: -10%;}</style><![endif]-->
 </head>
-<!-- head final -->
