--- a/img/style.css
+++ b/img/style.css
@@ -20,14 +20,13 @@ img {
   max-width: 100%;
   border-radius: 4px;
 }
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 a,
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 a,
+/*! .gcr-linha-1 .gcr-col-1 .gcr-bloco-4 a,
+.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 a, */
 a {
   color: #00f;
   text-decoration: none;
 }
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-4 a,
-.gcr-linha-1 .gcr-col-1 .gcr-bloco-7 a,
+
 a:hover {
   color: #ff4500;
 }
