--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,19 +2,56 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
-<meta content="width=device-width" name="viewport" />
-<title>{{ page.title }}</title>
-<meta content="summary_large_image" name="twitter:card" />
-<meta content="website" property="og:type" />
-<meta content="{{ page.description }}" property="og:description" />
-<meta content="" property="og:url" />
-<meta content="{{ page.image }}" property="og:image" />
-<meta content="{{ page.title }}" property="og:title" />
-<meta content="{{ page.description }}" name="description" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<title>{{ page.title }} | {{ site.title }}</title>
+<meta name="description" content="{{ page.description | default: site.description }}" />
+<meta name="keywords"content="{{ page.tags | join: ', ' | default: 'email marketing, estratégias de email, criação de newsletter, copywriting para email, automação de email, melhor horário para enviar email, fidelização por email, design de newsletter, técnicas de abertura de email, campanhas de email eficazes' }}"/>
+<meta name="author" content="Gean Ramos" />
+<meta name="robots" content="index, follow" />{% if page.image %}
+<meta name="image" content="{{ page.image | absolute_url }}" />{% else %}
+<meta name="image" content="https://picsum.photos/600/363" />{% endif %}
+<link rel="canonical" href="{{ page.url | absolute_url }}" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{{ page.title | escape }}" />
+<meta property="og:description" content="{{ page.description | default: site.description | escape }}" />
+<meta property="og:url" content="{{ page.url | absolute_url }}" />{% if page.image %}
+<meta property="og:image" content="{{ page.image | absolute_url }}" />{% else %}
+<meta property="og:image" content="https://picsum.photos/600/363" />{% endif %}
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="{{ page.title | escape }}" />
+<meta name="twitter:description" content="{{ page.description | default: site.description | escape }}" />{% if page.image %}
+<meta name="twitter:image" content="{{ page.image | absolute_url }}" />{% else %}
+<meta name="twitter:image" content="https://picsum.photos/600/363" />{% endif %}
+
 <link href="img/style.css?v=6" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700" rel="stylesheet" type="text/css" />
 <!-- favicon d1oco4z2z1fhwp d15k2d11r6t6rl -->
 <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" />
 <link rel="shortcut icon" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" type="image/x-icon" />
 <link rel="apple-touch-icon" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" />
+
+<!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#FD9599" />
+<!-- Windows Phone -->
+<meta name="msapplication-navbutton-color" content="#FD9599" />
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#FD9599" />
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TZBPFV014K"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+dataLayer.push(arguments);
+}
+gtag("js", new Date());
+gtag("config", "G-TZBPFV014K", {
+cookie_domain: "auto",
+});
+</script>
 </head>
+</html>
