--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>{{ page.title }}</title>
+<title>{{ page.title }} | {{ site.title }}</title>
 <meta name="description" content="{{ page.description | default: site.description }}" />
-<meta name="keywords" content="{{ page.tags | join: ', ' | default: 'email marketing, estratégias de email, criação de newsletter, copywriting para email, automação de email, melhor horário para enviar email, fidelização por email, design de newsletter, técnicas de abertura de email, campanhas de email eficazes' }}"/>
+<meta name="keywords"content="{{ page.tags | join: ', ' | default: 'email marketing, estratégias de email, criação de newsletter, copywriting para email, automação de email, melhor horário para enviar email, fidelização por email, design de newsletter, técnicas de abertura de email, campanhas de email eficazes' }}"/>
 <meta name="author" content="Gean Ramos" />
 <meta name="robots" content="index, follow" />{% if page.image %}
 <meta name="image" content="{{ page.image | absolute_url }}" />{% else %}
@@ -54,3 +52,4 @@ cookie_domain: "auto",
 });
 </script>
 </head>
+</html>
