--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,26 @@
 <div class="gcr-bloco gcr-bloco-5 gcr-image">
-<a href="#footer" target="_self"><img alt="assinatura" class="gcr-center gcr-fixedwidth" src="https://geanramos.com.br/img/assinatura.png" style="width: 117px; height: 36.46px;"></a>
+<a href="//gean.me/" target="_blank"><img alt="assinatura" class="gcr-center gcr-fixedwidth" src="https://geanramos.com.br/img/assinatura.png" style="width: 117px; height: 36.46px;"></a>
 </div>
 <div class="gcr-bloco gcr-bloco-6 gcr-social">
 <div class="content">
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
-<a href="https://www.facebook.com/" target="_self"><img alt="Facebook" src="https://geanramos.com.br/img/facebook.png" title="facebook" /></a>
+<a href="https://gean.me/fb" target="_blank"><img alt="Facebook" src="https://geanramos.com.br/img/facebook.png" title="facebook" /></a>
 </span>
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
-<a href="https://www.twitter.com/" target="_self"><img alt="Twitter" src="https://geanramos.com.br/img/twitter.png" title="twitter" /></a>
+<a href="https://gean.me/tw" target="_blank"><img alt="Twitter" src="https://geanramos.com.br/img/twitter.png" title="twitter" /></a>
 </span>
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
-<a href="https://www.instagram.com/" target="_self"><img alt="Instagram" src="https://geanramos.com.br/img/instagram.png" title="instagram" /></a>
+<a href="https://gean.me/ig" target="_blank"><img alt="Instagram" src="https://geanramos.com.br/img/instagram.png" title="instagram" /></a>
 </span>
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
-<a href="https://www.threads.net" target="_blank"><img alt="Threads" src="https://geanramos.com.br/img/threads.png" title="Threads" /></a>
+<a href="https://gean.me/thr" target="_blank"><img alt="Threads" src="https://geanramos.com.br/img/threads.png" title="Threads" /></a>
 </span>
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
 <a href="https://bsky.app/" target="_blank"><img alt="Bluesky" src="https://geanramos.com.br/img/bluesky.png" title="Bluesky" /></a>
 </span>
 <span class="icon" style="padding: 0 2.5px 0 2.5px;">
-<a href="https://www.whatsapp.com" target="_blank"><img alt="WhatsApp" src="https://geanramos.com.br/img/whatsapp.png" title="WhatsApp" /></a>
+<a href="https://gean.me/zap" target="_blank"><img alt="WhatsApp" src="https://geanramos.com.br/img/whatsapp.png" title="WhatsApp" /></a>
 </span>
 </div>
 </div>
-<div class="gcr-bloco gcr-bloco-7 gcr-paragraph">
-<p>© 1998 - 2025 / A Deus toda a glória.</p>
-</div>
-</div>
-</div>
-</div>
-<!--gean.me-->
-</body>
-</html>
+
