--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,4 +23,9 @@
 </span>
 </div>
 </div>
-
+<div class="gcr-bloco gcr-bloco-7 gcr-paragraph">
+<p>© 1998 - 2025 / A Deus toda a glória.</p>
+</div>
+</div>
+</div>
+</div>
