--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,3 +10,6 @@
 <div class="gcr-bloco gcr-bloco-2 gcr-image">
 <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" target="_self"><img alt="avatar" class="gcr-center gcr-fixedwidth" src="https://avatars.githubusercontent.com/u/6352393?v=4" style="max-width: 80px; border-radius: 100px;" /></a>
 </div>
+<div class="gcr-bloco gcr-bloco-3 gcr-heading">
+<h1><span class="pequeno-espaco">{{ site.title }}</span></h1>
+</div>
