--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,5 @@
 <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" target="_self"><img alt="avatar" class="gcr-center gcr-fixedwidth" src="https://avatars.githubusercontent.com/u/6352393?v=4" style="max-width: 80px; border-radius: 100px;" /></a>
 </div>
 <div class="gcr-bloco gcr-bloco-3 gcr-heading">
-<h1><span class="pequeno-espaco">{{ site.title }}</span></h1>
+<h1><span class="pequeno-espaco">{{ post.title }}</span></h1>
 </div>
