Update and rename style.css to style.css

--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,9 @@ a:hover {
 box-sizing: border-box;
 }
 
-body,
-h1,
-p {
-/*! margin: 0; */
+h1,h2,h3,h4,h5,h6
+{
+margin: 0;
 }
 
 .gcr-linha-content {
