--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 <meta name="twitter:image" content="{{ page.image | absolute_url }}" />{% else %}
 <meta name="twitter:image" content="https://picsum.photos/600/363" />{% endif %}
 
-<link href="img/style.css?v=6" rel="stylesheet" type="text/css" />
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700" rel="stylesheet" type="text/css" />
 <!-- favicon d1oco4z2z1fhwp d15k2d11r6t6rl -->
 <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://fonts.gstatic.com/s/e/notoemoji/16.0/1f4ec/32.png" />
